syntax = "proto3";

option csharp_namespace = "DatabaseService";

package DatabaseService;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

message Measurement {
    int32 id = 1;
    int32 device_id = 2;
    double temperature = 3;
    double humidity = 4;
    int32 battery = 5;
    int32 signal_strength = 6;
    google.protobuf.Timestamp timestamp = 7;
}

message GetCurrentRequest {
    int32 deviceId = 1;
}

message MeasurementResponse {
    Measurement measurement = 1;
}

message ListDayRequest {
    int32 device_id = 1;
}

message MeasurementListResponse {
    repeated MeasurementResponse measurements = 1;
}

message CreateMeasurementRequest {
    int32 device_id = 2;
    double temperature = 3;
    double humidity = 4;
    int32 battery = 5;
    int32 signal_strength = 6;
    google.protobuf.Timestamp timestamp = 7;
}

service MeasurementService {
    rpc GetCurrent (GetCurrentRequest) returns (MeasurementResponse) {}
    rpc ListDay (ListDayRequest) returns (MeasurementListResponse) {}
    rpc CreateMeasurement (CreateMeasurementRequest) returns (google.protobuf.Empty) {}
}
